# SchemaFlux

./: .gitignore  .replit  LICENSE  MANIFEST.in  Pasted-Here-s-a-crafted-AI-agent-prompt-for-building-a-Database-Migration-Library-that-focuses-on-necessity-1730789748142.txt  README.md  build_package.py  main.py  pyproject.toml
migration_logs/: migration_log_20241105.json
migrations/: 20241105063812_initial_schema.sql
pymigrate/: analytics.py  cli.py  connector.py  core.py  version.py
pymigrate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pymigrate/connectors/: __init__.py  base.py  mongodb.py
schemaflux/: core.py  utils.py
schemaflux/connectors/: postgresql.py
